--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@
 		</div><!-- /.container -->
 		<footer>
     		<ul>
-        		<li><a href="mailto:@gmail.com">email</a></li>
-        		<li><a href="https://github.com/">github.com/</a></li>
+        		<li><a href="mailto:sstawinski@gmail.com">email</a></li>
+        		<!-- <li><a href="https://github.com/">github.com/</a></li> -->
 			</ul>
 		</footer>
 	</body>
