--- a/index.html
+++ b/index.html
@@ -9,8 +9,10 @@
 		<nav>
     		<ul>
         		<li><a href="/">Home</a></li>
-	        	<li><a href="/about">About</a></li>
+	        	<li><a href="/Research">Research</a></li>
         		<li><a href="/cv">CV</a></li>
+        		<li><a href="/publications">Publications</a></li>
+			
     		</ul>
 		</nav>
 		<div class="container">
