--- a/index.html
+++ b/index.html
@@ -10,15 +10,15 @@
     		<ul>
         		<li><a href="/">Home</a></li>
 	        	<li><a href="/Research">Research</a></li>
-        		<li><a href="/cv">CV</a></li>
+        		<li><a href="/CV/StawinskiStephanie_CV.pdf">CV</a></li>
         		<li><a href="/publications/pub.html">Publications</a></li>
 			
     		</ul>
 		</nav>
 		<div class="container">
     		<div class="blurb">
-        		<h1>Hi there, I'm Stephanie!</h1>
-				<p>I'm UCI graduate student. </a></p>
+        		<h1>Stephanie Urbano Stawinski</h1>
+				<p>I'm a UCI graduate student. </a></p>
     		</div><!-- /.blurb -->
 		</div><!-- /.container -->
 		<footer>
