--- a/publications/pub.html
+++ b/publications/pub.html
@@ -19,7 +19,7 @@
     		<div class="blurb">
 				<p>List of Publications: </a></p>
     		</div><!-- /.blurb -->
-        	<li><a href="https://ui.adsabs.harvard.edu/search/q=author%3A(%22stawinski%2Cstephanie%22)&sort=date%20desc%2C%20bibcode%20desc&p_=0">NASA ads</a></li>
+        	<p><a href="https://ui.adsabs.harvard.edu/search/q=author%3A(%22stawinski%2Cstephanie%22)&sort=date%20desc%2C%20bibcode%20desc&p_=0">NASA ads</a><p>
 
 		</div><!-- /.container -->
 		<footer>
