--- a/publications/pub.html
+++ b/publications/pub.html
@@ -20,6 +20,7 @@
 				<p>List of Publications: </a></p>
     		</div><!-- /.blurb -->
         	<pud><a href="https://ui.adsabs.harvard.edu/search/q=author%3A(%22stawinski%2Cstephanie%22)&sort=date%20desc%2C%20bibcode%20desc&p_=0">NASA ads</a><pud>
+    		</div><!-- /.blurb -->
 
 		</div><!-- /.container -->
 		<footer>
