--- a/publications/pub.html
+++ b/publications/pub.html
@@ -17,7 +17,7 @@
 		</nav>
 		<div class="container">
     		<div class="blurb">
-				<p>List of Publications: </a></p>
+				<p>List of Publications: </p>
         			<pud><a href="https://ui.adsabs.harvard.edu/search/q=author%3A(%22stawinski%2Cstephanie%22)&sort=date%20desc%2C%20bibcode%20desc&p_=0" style="color:#0000FF;">NASA ads</a></pud>
     		</div><!-- /.blurb -->
 		</div><!-- /.container -->
