--- a/publications/pub.html
+++ b/publications/pub.html
@@ -25,7 +25,7 @@
 
 		<footer>
     		<ul>
-        		<li><a href="mailto:sstawinski@gmail.com">email</a></li>
+        		<li><a href="mailto:ststawinski@gmail.com">email</a></li>
 			</ul>
 		</footer>
 	</body>
