--- a/publications/pub.html
+++ b/publications/pub.html
@@ -18,8 +18,9 @@
 		<div class="container">
     		<div class="blurb">
 				<p>List of Publications: 
+				<br>
 				<br>	
-        			<pud><a href="https://ui.adsabs.harvard.edu/search/q=author%3A(%22stawinski%2Cstephanie%22)&sort=date%20desc%2C%20bibcode%20desc&p_=0" style="color:#0000FF;">NASA ads</a></pud>
+        			<pud style="font-size: 1.2em;"><a href="https://ui.adsabs.harvard.edu/search/q=author%3A(%22stawinski%2Cstephanie%22)&sort=date%20desc%2C%20bibcode%20desc&p_=0" style="color:#0000FF;">NASA ads</a></pud>
 					</p>
     		</div><!-- /.blurb -->
 		</div><!-- /.container -->
