--- a/publications/pub.html
+++ b/publications/pub.html
@@ -11,7 +11,7 @@
         		<li><a href="/">Home</a></li>
 	        	<li><a href="/Research">Research</a></li>
         		<li><a href="/cv">CV</a></li>
-        		<li><a href="/publications">Publications</a></li>
+        		<li><a href="/publications/pub.html">Publications</a></li>
 			
     		</ul>
 		</nav>
