--- a/publications/pub.html
+++ b/publications/pub.html
@@ -20,7 +20,7 @@
 				<p>List of Publications: 
 				<br>
 				<br>	
-        			<pud style="font-size: 1.2em;"><a href="https://ui.adsabs.harvard.edu/search/q=author%3A(%22stawinski%2Cstephanie%22)&sort=date%20desc%2C%20bibcode%20desc&p_=0" style="color:#0000FF;">NASA ads</a></pud>
+        			<small><a href="https://ui.adsabs.harvard.edu/search/q=author%3A(%22stawinski%2Cstephanie%22)&sort=date%20desc%2C%20bibcode%20desc&p_=0" style="color:#0000FF;">NASA ads</a></small>
 					</p>
     		</div><!-- /.blurb -->
 		</div><!-- /.container -->
