--- a/publications/pub.html
+++ b/publications/pub.html
@@ -10,7 +10,7 @@
     		<ul>
         		<li><a href="/">Home</a></li>
 	        	<li><a href="/Research">Research</a></li>
-        		<li><a href="/cv">CV</a></li>
+        		<li><a href="/CV/StawinskiStephanie_CV.pdf">CV</a></li>
         		<li><a href="/publications/pub.html">Publications</a></li>
 			
     		</ul>
