--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 		</div><!-- /.container -->
 		<footer>
     		<ul>
-        		<li><a href="mailto:sstawinski@gmail.com">email</a></li>
+        		<li><a href="mailto:ststawinski@gmail.com">email</a></li>
         		<!-- <li><a href="https://github.com/">github.com/</a></li> -->
 			</ul>
 		</footer>
