--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 		<div class="container">
     		<div class="blurb">
         		<h1>Stephanie Urbano Stawinski</h1>
-				<p>I'm a UCI graduate student. </a></p>
+				<p>Welcome to my website! I am a UCI graduate student who studies galaxy evolution. </a></p>
     		</div><!-- /.blurb -->
 		</div><!-- /.container -->
 		<footer>
