--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 		<link rel="stylesheet" type="text/css" href="/css/main.css">
 	</head>
 	<body>
-		<nav>
+		<div class="topnav">
     		<ul>
         		<li><a href="/">Home</a></li>
 	        	<li><a href="/Research">Research</a></li>
@@ -14,7 +14,8 @@
         		<li><a href="/publications/pub.html">Publications</a></li>
 			
     		</ul>
-		</nav>
+		</div>
+		
 		<div class="container">
     		<div class="blurb">
         		<h1>Stephanie Urbano Stawinski</h1>
