--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 	</head>
 	<body>
 		<div class="topnav">
+		<nav>
     		<ul>
         		<li><a href="/">Home</a></li>
 	        	<li><a href="/Research">Research</a></li>
@@ -14,6 +15,7 @@
         		<li><a href="/publications/pub.html">Publications</a></li>
 			
     		</ul>
+		</nav>
 		</div>
 		
 		<div class="container">
