--- a/index.html
+++ b/index.html
@@ -7,15 +7,10 @@
 	</head>
 	<body>
 		<div class="topnav">
-		<nav>
-    		<ul>
-        		<li><a href="/">Home</a></li>
-	        	<li><a href="/Research">Research</a></li>
-        		<li><a href="/CV/StawinskiStephanie_CV.pdf">CV</a></li>
-        		<li><a href="/publications/pub.html">Publications</a></li>
-			
-    		</ul>
-		</nav>
+			<a href="/">Home</a>
+	        	<a href="/Research">Research</a>
+        		<a href="/CV/StawinskiStephanie_CV.pdf">CV</a>
+        		<a href="/publications/pub.html">Publications</a>
 		</div>
 		
 		<div class="container">
