--- a/index.html
+++ b/index.html
@@ -6,12 +6,12 @@
 		<link rel="stylesheet" type="text/css" href="/css/main.css">
 	</head>
 	<body>
-		<div class="topnav">
+		<nav>
 			<a href="/">Home</a>
 	        	<a href="/Research">Research</a>
         		<a href="/CV/StawinskiStephanie_CV.pdf">CV</a>
         		<a href="/publications/pub.html">Publications</a>
-		</div>
+		</nav>
 		
 		<div class="container">
     		<div class="blurb">
