--- a/publications/pub.html
+++ b/publications/pub.html
@@ -7,13 +7,11 @@
 	</head>
 	<body>
 		<nav>
-    		<ul>
-        		<li><a href="/">Home</a></li>
-	        	<li><a href="/Research">Research</a></li>
-        		<li><a href="/CV/StawinskiStephanie_CV.pdf">CV</a></li>
-        		<li><a href="/publications/pub.html">Publications</a></li>
-			
-    		</ul>
+        		<a href="/">Home</a>
+	        	<a href="/Research">Research</a>
+        		<a href="/CV/StawinskiStephanie_CV.pdf">CV</a>
+        		<a href="/publications/pub.html">Publications</a>
+		
 		</nav>
 		<div class="container">
     		<div class="blurb">
