--- a/index.html
+++ b/index.html
@@ -13,12 +13,14 @@
         		<a href="/publications/pub.html">Publications</a>
 		</nav>
 		
-		<div class="container">
-    		<div class="blurb">
+		<div class="bg-image"></div>
+
+		<div class="bg-text">
         		<h1>Stephanie Urbano Stawinski</h1>
 				<p>Welcome to my website! I am a UCI graduate student who studies galaxy evolution. </a></p>
-    		</div><!-- /.blurb -->
-		</div><!-- /.container -->
+    		</div>
+    		</div>
+
 		<footer>
     		<ul>
         		<li><a href="mailto:ststawinski@gmail.com">email</a></li>
