--- a/index.html
+++ b/index.html
@@ -16,7 +16,8 @@
 		<div class="bg-image"></div>
 
 		<div class="bg-text">
-        		<h1>Stephanie Urbano Stawinski</h1>
+        		<h1>Stephanie Urbano Stawinski
+				<br> <small> University of California, Irvine </small> </h1>
 				<p>Welcome to my website! I am a UCI graduate student who studies galaxy evolution. </a></p>
     		</div>
 
