--- a/index.html
+++ b/index.html
@@ -3,9 +3,18 @@
 	<head>
 		<title>Stephanie Urbano Stawinski</title>
 			<!-- link to main stylesheet -->
+		<style>
+body {
+  background-image: src('/hubbledeep.jpg');
+  background-repeat: no-repeat;
+  background-attachment: fixed;  
+  background-size: cover;
+}
+</style>
 		<link rel="stylesheet" type="text/css" href="/css/main.css">
 	</head>
 	<body>
+		
 		<nav>
 			<a href="/">Home</a>
 	        	<a href="/Research">Research</a>
