--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 
 		<style>
 			body {
-  				background-image: src('/hubbledeep.jpg');
+  				background-image: url('hubbledeep.jpg');
   				background-repeat: no-repeat;
   				background-attachment: fixed;  
   				background-size: cover;
