--- a/index.html
+++ b/index.html
@@ -5,6 +5,24 @@
 			<!-- link to main stylesheet -->
 		<link rel="stylesheet" type="text/css" href="/css/main.css">
 
+		<style>
+			body {
+  				background-image: url('hubbledeep.jpg');
+				 
+				/* Add the blur effect */
+  				filter: blur(8px);
+  				-webkit-filter: blur(8px);
+  
+  				/* Full height */
+  				height: 100%; 
+  
+  				/* Center and scale the image nicely */
+  				background-position: center;
+  				background-repeat: no-repeat;
+  				background-size: cover;
+  				background-attachment: fixed;  
+			}
+		</style>
 	</head>
 	<body>
 		
