--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 		<div class="bg-text">
         		<h1>Stephanie Urbano Stawinski
 				<br> <small> University of California, Irvine </small> </h1>
-				<p>Welcome to my website!! I am a UCI graduate student who studies galaxy evolution.</p>
+				<p>Welcome to my website!! I am a UCI graduate student who studies galaxy evolution..</p>
     		</div>
 
 		<footer>
