--- a/index.html
+++ b/index.html
@@ -37,10 +37,7 @@
     		</div>
 
 		<footer>
-    		<ul>
-        		<li><a href="mailto:ststawinski@gmail.com">email</a></li>
-        		<!-- <li><a href="https://github.com/">github.com/</a></li> -->
-			</ul>
+			<a href="mailto:ststawinski@gmail.com">email</a>
 		</footer>
 	</body>
 </html>
