--- a/index.html
+++ b/index.html
@@ -4,11 +4,47 @@
 		<title>Stephanie Urbano Stawinski</title>
 			<!-- link to main stylesheet -->
 		<link rel="stylesheet" type="text/css" href="/css/main.css">
+	* {
+  		box-sizing: border-box;
+	}
 
+	.bg-image {
+  		/* The image used */
+  		background-image: url("photographer.jpg");
+  
+  		/* Add the blur effect */
+  		filter: blur(8px);
+  		-webkit-filter: blur(8px);
+  
+  		/* Full height */
+  		height: 100%; 
+  
+  		/* Center and scale the image nicely */
+  		background-position: center;
+ 		 background-repeat: no-repeat;
+  		background-size: cover;
+	}
 
+	/* Position text in the middle of the page/image */
+	.bg-text {
+  		background-color: rgb(0,0,0); /* Fallback color */
+  		background-color: rgba(0,0,0, 0.4); /* Black w/opacity/see-through */
+  		color: white;
+  		font-weight: bold;
+  		border: 3px solid #f1f1f1;
+  		position: absolute;
+  		top: 50%;
+  		left: 50%;
+  		transform: translate(-50%, -50%);
+  		z-index: 2;
+  		width: 80%;
+  		padding: 20px;
+  		text-align: center;
+	}
+	</style>
 	</head>
+
 	<body>
-		
 		<nav>
 			<a href="/">Home</a>
 	        	<a href="/Research">Research</a>
