--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 	<style>
 		.bg-image {
   			/* The image used */
-  			background-image: url("photographer.jpg");
+  			background-image: url("hubbledeep.jpg");
   
   			/* Add the blur effect */
   			filter: blur(8px);
@@ -31,7 +31,7 @@
   			font-weight: bold;
   			border: 3px solid #f1f1f1;
   			position: absolute;
-  			top: 50%;
+  			top: 80%;
   			left: 50%;
   			transform: translate(-50%, -50%);
   			z-index: 2;
@@ -54,7 +54,7 @@
 		<div class="bg-text">
         		<h1>Stephanie Urbano Stawinski
 				<br> <small> University of California, Irvine </small> </h1>
-				<p>Welcome to my website! I am a UCI graduate student who studies galaxy evolution.</p>
+				<p> Welcome to my website! I am a UCI graduate student who studies galaxy evolution.</p>
     		</div>
 
 		<footer>
