--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
         		<a href="/publications/pub.html">Publications</a>
 		</nav>
 		
-
+		<div class="bg-image">
 		<div class="bg-text">
         		<h1>Stephanie Urbano Stawinski
 				<br> <small> University of California, Irvine </small> </h1>
