--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   			background-image: url("hubbledeep.jpg");
   
   			/* Add the blur effect */
-  			filter: blur(8px);
+  			/*filter: blur(8px);
   			-webkit-filter: blur(8px);
   
   			/* Full height */
