--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
 			<!-- link to main stylesheet -->
 		<link rel="stylesheet" type="text/css" href="/css/main.css">
 
-	<style>
-		.bg-image {
+		<style>
+		bg-image {
   			/* The image used */
   			background-image: url("hubbledeep.jpg");
   
@@ -24,7 +24,7 @@
 		}
 
 		/* Position text in the middle of the page/image */
-		.bg-text {
+		bg-text {
   			background-color: rgb(0,0,0); /* Fallback color */
   			background-color: rgba(0,0,0, 0.4); /* Black w/opacity/see-through */
   			color: white;
@@ -39,7 +39,7 @@
   			padding: 20px;
   			text-align: center;
 		}
-	</style>
+		</style>
 	</head>
 
 	<body>
