--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 		<nav>
 			<a href="/">Home</a>
 	        	<a href="/Research">Research</a>
-        		<a href="/CV/StawinskiStephanie_CV.pdf">CV</a>
+        		<a href="/CV/StawinskiStephanie_CV.pdf">CV.</a>
         		<a href="/publications/pub.html">Publications</a>
 		</nav>
 		
