--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 		<link rel="stylesheet" type="text/css" href="/css/main.css">
 
 		<style>
-		bg-image {
+		.bg-image {
   			/* The image used */
   			background-image: url("hubbledeep.jpg");
   
@@ -24,7 +24,7 @@
 		}
 
 		/* Position text in the middle of the page/image */
-		bg-text {
+		.bg-text {
   			background-color: rgb(0,0,0); /* Fallback color */
   			background-color: rgba(0,0,0, 0.4); /* Black w/opacity/see-through */
   			color: white;
@@ -50,7 +50,7 @@
         		<a href="/publications/pub.html">Publications</a>
 		</nav>
 		
-		<div class="bg-image">
+		<div class="bg-image"> </div>
 		<div class="bg-text">
         		<h1>Stephanie Urbano Stawinski
 				<br> <small> University of California, Irvine </small> </h1>
