--- a/index.html
+++ b/index.html
@@ -36,8 +36,8 @@
 		<div class="bg-image"> </div>
 		<div class="bg-text">
         		<h1>Stephanie Urbano Stawinski
-				<br> <small> University of California, Irvine </small> </h1>
-				<p> Welcome to my website! I am a UCI graduate student who studies galaxy evolution.</p>
+				<br> <small> <small> University of California, Irvine </small> </small> </h1>
+				<p style="font-size:30px"> Welcome to my website! I am a UCI graduate student who studies galaxy evolution.</p>
     		</div>
 
 		<footer>
