--- a/index.html
+++ b/index.html
@@ -35,9 +35,9 @@
 		
 		<div class="bg-image"> </div>
 		<div class="bg-text">
-        		<h1>Stephanie Urbano Stawinski
-				<br> <small> <small> University of California, Irvine </small> </small> </h1>
-				<p style="font-size:30px"> Welcome to my website! I am a UCI graduate student who studies galaxy evolution.</p>
+        		<h1 style="font-size:40px">Stephanie Urbano Stawinski
+				<br> <small> University of California, Irvine </small> </h1>
+				<p style="font-size:20px"> Welcome to my website! I am a UCI graduate student who studies galaxy evolution.</p>
     		</div>
 
 		<footer>
