--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 		<div class="bg-image"> </div>
 		<div class="bg-text">
         		<h1>Stephanie Urbano Stawinski
-				<br> <small> University of California, Irvine </small> </h1>
+				<br style="font-size=20pix;"> <small> University of California, Irvine </small> </h1>
 				<p> Welcome to my website! I am a UCI graduate student who studies galaxy evolution.</p>
     		</div>
 
