--- a/index.html
+++ b/index.html
@@ -35,8 +35,8 @@
 		
 		<div class="bg-image"> </div>
 		<div class="bg-text">
-			<h1>Stephanie Urbano Stawinski </h1>
-				<br> <h1style="font-size=10pix;"> University of California, Irvine </h1>
+			<h1 style="font-size=30pix;"> Stephanie Urbano Stawinski </h1>
+				<br> <h1 style="font-size=20pix;"> University of California, Irvine </h1>
 				<p> Welcome to my website! I am a UCI graduate student who studies galaxy evolution.</p>
     		</div>
 
