--- a/index.html
+++ b/index.html
@@ -35,9 +35,9 @@
 		
 		<div class="bg-image"> </div>
 		<div class="bg-text">
-			<h1 style="font-size=20pix;"> Stephanie Urbano Stawinski </h1>
-				<br> <h1 style="font-size=15pix;"> University of California, Irvine </h1>
-				<p> Welcome to my website! I am a UCI graduate student who studies galaxy evolution.</p>
+			<h1> Stephanie Urbano Stawinski </h1>
+				<p> University of California, Irvine <p>
+				<br> <p> Welcome to my website! I am a UCI graduate student who studies galaxy evolution.</p>
     		</div>
 
 		<footer>
