--- a/publications/pub.html
+++ b/publications/pub.html
@@ -36,8 +36,8 @@
 				<p>List of Publications: 
 				<br>	
 				<br>
-					<br>
-        			<small><a href="https://ui.adsabs.harvard.edu/search/q=author%3A(%22stawinski%2Cstephanie%22)&sort=date%20desc%2C%20bibcode%20desc&p_=0" style="color:#0000FF;">NASA ads</a></small>
+				<br>
+        			<small><a href="https://ui.adsabs.harvard.edu/search/q=author%3A(%22stawinski%2Cstephanie%22)&sort=date%20desc%2C%20bibcode%20desc&p_=0" style="color:#00FFFF;">NASA ads</a></small>
 					</p>
     		</div><!-- /.blurb -->
 
