--- a/index.html
+++ b/index.html
@@ -41,7 +41,8 @@
     		</div>
 
 		<footer>
-			<a href="mailto:ststawinski@gmail.com">email</a>
+			<div class="line"></div>
+			<a href="https://spacetelescope.org/news/heic1411/">Image Credit: NASA, ESA, H. Teplitz and M. Rafelski (IPAC/Caltech), A. Koekemoer (STScI), R. Windhorst (Arizona State University), and Z. Levay (STScI)</a>
 		</footer>
 	</body>
 </html>
