--- a/publications/pub.html
+++ b/publications/pub.html
@@ -42,9 +42,8 @@
     		</div><!-- /.blurb -->
 
 		<footer>
-    		<ul>
-        		<li><a href="mailto:ststawinski@gmail.com">email</a></li>
-			</ul>
+			<div class="line"></div>
+			<a href="https://spacetelescope.org/news/heic1411/">Image Credit: NASA, ESA, H. Teplitz and M. Rafelski (IPAC/Caltech), A. Koekemoer (STScI), R. Windhorst (Arizona State University), and Z. Levay (STScI)</a>
 		</footer>
 	</body>
 </html>
