--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 			<h1> Stephanie Urbano Stawinski </h1>
 				<p> University of California, Irvine <p>
 				<br> <p> Welcome to my website! I am a second year Ph.D. student at UCI. My research is in galaxy evolution and formation. Specifically
-			I am interested in studying the gas in and around galaxies at z > 2.</p>
+			I am interested in studying the gas in and around galaxies.</p>
     		</div>
 
 		<footer>
