--- a/index.html
+++ b/index.html
@@ -22,6 +22,10 @@
   				padding: 20px;
   				text-align: center;
 			}
+			bg-text p{
+				font-size: 25px;
+    				line-height: 28px;
+			}
 		</style>
 	</head>
 
