--- a/index.html
+++ b/index.html
@@ -22,10 +22,7 @@
   				padding: 20px;
   				text-align: center;
 			}
-			bg-text p{
-				font-size: 25px;
-    				line-height: 28px;
-			}
+
 		</style>
 	</head>
 
@@ -41,7 +38,7 @@
 		<div class="bg-text">
 			<h1> Stephanie Urbano Stawinski </h1>
 				<p> University of California, Irvine <p>
-				<br> <p> Welcome to my website! I am a second year Ph.D. student at UCI. My research is in galaxy evolution and formation. Specifically
+				<br> <p style="line-height:28px;"> Welcome to my website! I am a second year Ph.D. student at UCI. My research is in galaxy evolution and formation. Specifically
 			I am interested in studying the gas in and around galaxies.</p>
     		</div>
 
