--- a/index.html
+++ b/index.html
@@ -41,6 +41,12 @@
 				<br> <p style="line-height:28px;"> Welcome to my website! I am a second year Ph.D. student at UCI. My research is in galaxy evolution and formation. Specifically
 			I am interested in studying the gas in and around galaxies.</p>
     		</div>
+		<div class="bg-text2">
+			<h1> Stephanie Urbano Stawinski </h1>
+				<p> University of California, Irvine <p>
+				<br> <p style="line-height:28px;"> Welcome to my website! I am a second year Ph.D. student at UCI. My research is in galaxy evolution and formation. Specifically
+			I am interested in studying the gas in and around galaxies.</p>
+    		</div>
 
 		<footer>
 			<div class="line"></div>
