--- a/index.html
+++ b/index.html
@@ -22,6 +22,21 @@
   				padding: 20px;
   				text-align: center;
 			}
+			.bg-text2 {
+  				background-color: rgb(0,0,0); /* Fallback color */
+  				background-color: rgba(0,0,0, 0.5); /* Black w/opacity/see-through */
+  				color: white;
+  				font-weight: bold;
+  				border: 3px solid #f1f1f1;
+  				position: absolute;
+  				top: 80%;
+  				left: 50%;
+  				transform: translate(-50%, -50%);
+  				z-index: 2;
+  				width: 80%;
+  				padding: 20px;
+  				text-align: center;
+			}
 
 		</style>
 	</head>
