--- a/index.html
+++ b/index.html
@@ -53,13 +53,9 @@
 		<div class="bg-text">
 			<h1> Stephanie Urbano Stawinski </h1>
 				<p> University of California, Irvine <p>
-				<br> <p style="line-height:28px;"> Welcome to my website! I am a second year Ph.D. student at UCI. My research is in galaxy evolution and formation. Specifically
-			I am interested in studying the gas in and around galaxies.</p>
     		</div>
 		<div class="bg-text2">
-			<h1> Stephanie Urbano Stawinski </h1>
-				<p> University of California, Irvine <p>
-				<br> <p style="line-height:28px;"> Welcome to my website! I am a second year Ph.D. student at UCI. My research is in galaxy evolution and formation. Specifically
+				<p style="line-height:28px;"> Welcome to my website! I am a second year Ph.D. student at UCI. My research is in galaxy evolution and formation. Specifically
 			I am interested in studying the gas in and around galaxies.</p>
     		</div>
 
