--- a/index.html
+++ b/index.html
@@ -57,18 +57,9 @@
 					<div class="inner">
 
 						<header>
-							<h2>TWENTY</h2>
+							<h2>Stephanie Urbano Stawinski</h2>
 						</header>
-						<p>This is <strong>Twenty</strong>, a free
-						<br />
-						responsive template
-						<br />
-						by <a href="http://html5up.net">HTML5 UP</a>.</p>
-						<footer>
-							<ul class="buttons stacked">
-								<li><a href="#main" class="button fit scrolly">Tell Me More</a></li>
-							</ul>
-						</footer>
+						<p>Ph.D Student at university of California, Irvine</p>
 
 					</div>
 
