--- a/index.html
+++ b/index.html
@@ -21,13 +21,10 @@
 					<!-- Inner -->
 						<div class="inner">
 							<header>
-								<h1><a href="index.html" id="logo">Helios</a></h1>
+								<h1>Stephanie Urbano Stawinski</h1>
 								<hr />
-								<p>Another fine freebie by HTML5 UP</p>
+								<p>Ph.D. Student at University of California, Irvine</p>
 							</header>
-							<footer>
-								<a href="#banner" class="button circled scrolly">Start</a>
-							</footer>
 						</div>
 
 					<!-- Nav -->
@@ -35,7 +32,7 @@
 							<ul>
 								<li><a href="index.html">Home</a></li>
 								<li>
-									<a href="#">Dropdown</a>
+									<a href="#">Research Interests</a>
 									<ul>
 										<li><a href="#">Lorem ipsum dolor</a></li>
 										<li><a href="#">Magna phasellus</a></li>
@@ -52,8 +49,8 @@
 										<li><a href="#">Veroeros feugiat</a></li>
 									</ul>
 								</li>
-								<li><a href="left-sidebar.html">Left Sidebar</a></li>
-								<li><a href="right-sidebar.html">Right Sidebar</a></li>
+								<li><a href="left-sidebar.html">Publications</a></li>
+								<li><a href="right-sidebar.html">CV</a></li>
 								<li><a href="no-sidebar.html">No Sidebar</a></li>
 							</ul>
 						</nav>
