--- a/index.html
+++ b/index.html
@@ -32,26 +32,23 @@
 							<ul>
 								<li><a href="index.html">Home</a></li>
 								<li>
-									<a href="#">Research Interests</a>
+									<a href="#">Research</a>
 									<ul>
-										<li><a href="#">Lorem ipsum dolor</a></li>
-										<li><a href="#">Magna phasellus</a></li>
-										<li><a href="#">Etiam dolore nisl</a></li>
-										<li>
-											<a href="#">And a submenu &hellip;</a>
-											<ul>
-												<li><a href="#">Lorem ipsum dolor</a></li>
-												<li><a href="#">Phasellus consequat</a></li>
-												<li><a href="#">Magna phasellus</a></li>
-												<li><a href="#">Etiam dolore nisl</a></li>
-											</ul>
-										</li>
-										<li><a href="#">Veroeros feugiat</a></li>
+										<li><a href="#">High-Redshift Lya Emitters</a></li>
+										<li><a href="#">Ultra-Massive Galaxies</a></li>
+										<li><a href="#">CGM of DLAs</a></li>
+									</ul>
+								</li>
+								<li>
+									<a href="#">Outreach</a>
+									<ul>
+										<li><a href="#">PACE</a></li>
+										<li><a href="#">PGC</a></li>
 									</ul>
 								</li>
 								<li><a href="left-sidebar.html">Publications</a></li>
+								<li><a href="right-sidebar.html">Teaching</a></li>
 								<li><a href="right-sidebar.html">CV</a></li>
-								<li><a href="no-sidebar.html">No Sidebar</a></li>
 							</ul>
 						</nav>
 
