--- a/index.html
+++ b/index.html
@@ -189,7 +189,7 @@
 								<!-- Copyright -->
 									<div class="copyright">
 										<ul class="menu">
-											<li>&copy; Untitled. All rights reserved. Stawinski 2022 </li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
+											<li>&copy; Untitled. All rights reserved. </li><li> Stawinski 2022 </li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
 										</ul>
 									</div>
 
