--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 								<li><a href="left-sidebar.html">Publications</a></li>
 								<li><a href="right-sidebar.html">Teaching</a></li>
 								<li><a href="right-sidebar.html">CV</a></li>
-								<li><a href="CV/">CV</a></li>
+								<li><a href="CV/StawinskiStephanie_CV.pdf">CV</a></li>
 							</ul>
 						</nav>
 
@@ -58,7 +58,7 @@
 			<!-- Banner -->
 				<section id="banner">
 					<header>
-						<h1>About Me...</h1>
+						<h2>About Me...</h2>
 						<p>
 						I am a Ph.D student at University of California, Irvine studying galaxy evolution. I am interested in how galaxies form and evolve at high redshift. 
 						</p>
@@ -70,7 +70,6 @@
 			<!-- Footer -->
 				<div id="footer">
 					<div class="container">
-						<hr />
 						<div class="row">
 							<div class="col-12">
 
