--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 									<ul>
 										<li><a href="#">High-Redshift Lya Emitters</a></li>
 										<li><a href="#">Ultra-Massive Galaxies</a></li>
-										<li><a href="#">CGM of DLAs</a></li>
+										<li><a href="#">Diffuse Gas around Galaxies (CGM)</a></li>
 									</ul>
 								</li>
 								<li>
@@ -60,7 +60,7 @@
 					<header>
 						<h2>About Me...</h2>
 						<p>
-						I am a Ph.D student at University of California, Irvine studying galaxy evolution. I am interested in how galaxies form and evolve at high redshift. 
+						I am a third year Ph.D student at University of California, Irvine studying galaxy evolution. I am interested in how galaxies form and evolve at high redshift. 
 						</p>
 					</header>
 				</section>
