--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 								</li>
 								<li><a href="left-sidebar.html">Publications</a></li>
 								<li><a href="right-sidebar.html">Teaching</a></li>
-								<li><a href="right-sidebar.html">CV</a></li>
+								<li><a href="right-sidebar.html">Contact</a></li>
 								<li><a href="CV/StawinskiStephanie_CV.pdf">CV</a></li>
 							</ul>
 						</nav>
