--- a/contact.html
+++ b/contact.html
@@ -61,12 +61,13 @@
 
 								<!-- Contact -->
 									<section class="contact">
-										<header>
-											<h3>Contact Info</h3>
-										</header>
-										<p>Email: ststawins [at] uci.edu</p>
-										<p>Twitter: XX Email: ststawins [at] uci.edu</p>
-										<p>Twitter: XX Email: ststawins [at] uci.edu</p>
+										<p>Stephanie Urbano Stawinski
+										Frederick Reines Hall, 2186a
+										Department of Physics and Astronomy
+										University of California, Irvine</p>
+										<p>UCI Email: sstawins [at] uci.edu</p>
+										<p>Gmail: ststawinski [at] gmail.com</p>
+										<p>Twitter: XX </p>
 									</section>
 
 								<!-- Copyright -->
