--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
 										<header>
 											<h3>Contact Info</h3>
 										</header>
-										<p>Twitter: XX Email: ststawins [at] uci.edu</p>
+										<p>Twitter: XX Email: sstawins [at] uci.edu</p>
 									</section>
 
 								<!-- Copyright -->
