--- a/contact.html
+++ b/contact.html
@@ -46,7 +46,7 @@
 								</li>
 								<li><a href="left-sidebar.html">Publications</a></li>
 								<li><a href="right-sidebar.html">Teaching</a></li>
-								<li><a href="right-sidebar.html">Contact</a></li>
+								<li><a href="contact.html">Contact</a></li>
 								<li><a href="CV/StawinskiStephanie_CV.pdf">CV</a></li>
 							</ul>
 						</nav>
@@ -61,19 +61,19 @@
 
 								<!-- Contact -->
 									<section class="contact">
-										<p>Stephanie Urbano Stawinski
-										Frederick Reines Hall, 2186a
-										Department of Physics and Astronomy
+										<p>Stephanie Urbano Stawinski <br>
+										Frederick Reines Hall, 2186a <br>
+										Department of Physics and Astronomy <br>
 										University of California, Irvine</p>
-										<p>UCI Email: sstawins [at] uci.edu</p>
-										<p>Gmail: ststawinski [at] gmail.com</p>
+										<p>UCI Email: sstawins [at] uci.edu<br>
+										Gmail: ststawinski [at] gmail.com</p>
 										<p>Twitter: XX </p>
 									</section>
 
 								<!-- Copyright -->
 									<div class="copyright">
 										<ul class="menu">
-											<li>&copy; Untitled. All rights reserved. </li><li> Stawinski 2022 </li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
+											<li>&copy; 2022 Stawinski </li><li> <a href="https://spacetelescope.org/news/heic1411/">Image Credit: NASA, ESA, H. Teplitz and M. Rafelski (IPAC/Caltech), A. Koekemoer (STScI), R. Windhorst (Arizona State University), and Z. Levay (STScI)</a>  </li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
 										</ul>
 									</div>
 
