--- a/index.html
+++ b/index.html
@@ -84,7 +84,8 @@
 								<!-- Copyright -->
 									<div class="copyright">
 										<ul class="menu">
-											<li>&copy; 2022 Stawinski </li><li> <a href="https://spacetelescope.org/news/heic1411/">Image Credit: NASA, ESA, H. Teplitz and M. Rafelski (IPAC/Caltech), A. Koekemoer (STScI), R. Windhorst (Arizona State University), and Z. Levay (STScI)</a>  </li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
+											<li>&copy; 2022 Stawinski </li><li> Design: <a href="http://html5up.net">HTML5 UP</a></li> <br> 
+											<li><a href="https://spacetelescope.org/news/heic1411/">Image Credit: NASA, ESA, H. Teplitz and M. Rafelski (IPAC/Caltech), A. Koekemoer (STScI), R. Windhorst (Arizona State University), and Z. Levay (STScI)</a>  </li>
 										</ul>
 									</div>
 
