--- a/contact.html
+++ b/contact.html
@@ -61,8 +61,10 @@
 
 								<!-- Contact -->
 									<section class="contact">
-										<p>Stephanie Urbano Stawinski <br>
-										Frederick Reines Hall, 2186a <br>
+										<header>
+											<h2>Stephanie Urbano Stawinski </h2>
+										</header>
+										<p>Frederick Reines Hall, 2186a <br>
 										Department of Physics and Astronomy <br>
 										University of California, Irvine</p>
 										<p>UCI Email: sstawins [at] uci.edu<br>
@@ -73,8 +75,8 @@
 								<!-- Copyright -->
 									<div class="copyright">
 										<ul class="menu">
-											<li>&copy; 2022 Stawinski </li><li> <a href="https://spacetelescope.org/news/heic1411/">Image Credit: NASA, ESA, H. Teplitz and M. Rafelski (IPAC/Caltech), A. Koekemoer (STScI), R. Windhorst (Arizona State University), and Z. Levay (STScI)</a>  </li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
-										</ul>
+											<li>&copy; 2022 Stawinski </li><li> Design: <a href="http://html5up.net">HTML5 UP</a></li> <br> 
+											<li><a href="https://spacetelescope.org/news/heic1411/">Image Credit: NASA, ESA, H. Teplitz and M. Rafelski (IPAC/Caltech), A. Koekemoer (STScI), R. Windhorst (Arizona State University), and Z. Levay (STScI)</a>  </li>										</ul>
 									</div>
 
 							</div>
