--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 									<a href="#">Research</a>
 									<ul>
 										<li><a href="#">High-Redshift Lya Emitters</a></li>
-										<li><a href="#">Ultra-Massive Galaxies</a></li>
+										<li><a href="umgs.html">Ultra-Massive Galaxies</a></li>
 										<li><a href="#">Diffuse Gas around Galaxies (CGM)</a></li>
 									</ul>
 								</li>
