--- a/contact.html
+++ b/contact.html
@@ -21,7 +21,7 @@
 					<!-- Inner -->
 						<div class="inner">
 							<header>
-								<h1><a href="index.html" id="logo">Contact Info</a></h1>
+								<h1>Contact Info</h1>
 							</header>
 						</div>
 
