--- a/index.html
+++ b/index.html
@@ -34,15 +34,15 @@
 								<li>
 									<a href="#">Research</a>
 									<ul>
-										<li><a href="#">High-Redshift Lya Emitters</a></li>
+										<li><a href="lyaE.html">High-Redshift Lya Emitters</a></li>
 										<li><a href="umgs.html">Ultra-Massive Galaxies</a></li>
-										<li><a href="#">Diffuse Gas around Galaxies (CGM)</a></li>
+										<li><a href="cgm.html">Diffuse Gas around Galaxies (CGM)</a></li>
 									</ul>
 								</li>
 								<li>
-									<a href="#">Outreach</a>
+									<a href="#">Outreach & Service</a>
 									<ul>
-										<li><a href="#">PACE</a></li>
+										<li><a href="pace.html">PACE</a></li>
 										<li><a href="#">PGC</a></li>
 									</ul>
 								</li>
@@ -78,7 +78,7 @@
 										<header>
 											<h3>Contact Info</h3>
 										</header>
-										<p>Twitter: XX    Email: sstawins [at] uci.edu    Gmail: ststawinski [at] gmail.com</p>
+										<p>Twitter: XX  &emsp;  Email: sstawins [at] uci.edu  &emsp;  Gmail: ststawinski [at] gmail.com</p>
 									</section>
 
 								<!-- Copyright -->
