--- a/index.html
+++ b/index.html
@@ -39,15 +39,9 @@
 										<li><a href="cgm.html">Diffuse Gas around Galaxies (CGM)</a></li>
 									</ul>
 								</li>
-								<li>
-									<a href="#">Outreach & Service</a>
-									<ul>
-										<li><a href="pace.html">PACE</a></li>
-										<li><a href="#">PGC</a></li>
-									</ul>
-								</li>
-								<li><a href="left-sidebar.html">Publications</a></li>
-								<li><a href="right-sidebar.html">Teaching</a></li>
+								<li><a href="pub.html">Publications</a></li>
+								<li><a href="outreach.html">Outreach & Service</a></li>
+								<li><a href="teaching.html">Teaching</a></li>
 								<li><a href="contact.html">Contact</a></li>
 								<li><a href="CV/StawinskiStephanie_CV.pdf">CV</a></li>
 							</ul>
@@ -58,9 +52,12 @@
 			<!-- Banner -->
 				<section id="banner">
 					<header>
-						<h2>About Me...</h2>
+						<h3>About Me...</h3>
 						<p>
-						I am a third year Ph.D student at University of California, Irvine studying galaxy evolution. I am interested in how galaxies form and evolve at high redshift. 
+						I am a third year Astrophysics Ph.D student at University of California, Irvine studying galaxy evolution. In 2019, I earned
+my MS in Astronomy at San Diego State University studying gas around galaxies and its effects on the central galaxy. My current projects center around finding
+Lya emission from the most distant glaaxies.  <br>
+						Apart from research, I enjoy participating in astronomy/science outreach. 
 						</p>
 					</header>
 				</section>
