--- a/index.html
+++ b/index.html
@@ -55,9 +55,9 @@
 						<h3>About Me...</h3>
 						<p>
 						I am a third year Astrophysics Ph.D student at University of California, Irvine studying galaxy evolution. In 2019, I earned
-my MS in Astronomy at San Diego State University studying gas around galaxies and its effects on the central galaxy. My current projects center around finding
-Lya emission from the most distant glaaxies.  <br>
-						Apart from research, I enjoy participating in astronomy/science outreach. 
+my MS in Astronomy at San Diego State University studying gas around galaxies and its effects on the central galaxy. I am mainly interested in the evolution of high-redshift galaxies and their surroundings. 
+In the past I have searched for signatures of dust in the regions between galaxies (intergalactic medium) and have worked significantly in studying the exchange of gas in the circumgalactic medium around 
+distant galaxies. Currently I am looking for signatures of Lya emission from galaxies in the very distant universe. Outside of research, I am enthusiastic about teaching and astronomy outreach.
 						</p>
 					</header>
 				</section>
