--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@ distant galaxies. Currently I am looking for signatures of Lya emission from gal
 										<header>
 											<h3>Contact Info</h3>
 										</header>
-										<p>Twitter: XX  &emsp;  Email: sstawins [at] uci.edu  &emsp;  Gmail: ststawinski [at] gmail.com</p>
+										<p>Twitter: <a href="https://twitter.com/astrostawinski"> @astrostawinski </a> &emsp;  Email: sstawins [at] uci.edu  &emsp;  Gmail: ststawinski [at] gmail.com</p>
 									</section>
 
 								<!-- Copyright -->
