--- a/umgs.html
+++ b/umgs.html
@@ -12,7 +12,7 @@
 		<link rel="stylesheet" href="assets/css/main.css" />
 		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
 	</head>
-	<body class="no-sidebar is-preload">
+	<body class="homepage is-preload">
 		<div id="page-wrapper">
 
 			<!-- Header -->
@@ -21,7 +21,9 @@
 					<!-- Inner -->
 						<div class="inner">
 							<header>
-								<h1><a href="index.html" id="logo">Ultra-Massive Galaxies</a></h1>
+								<h1>Stephanie Urbano Stawinski</h1>
+								<hr />
+								<p>Ph.D. Student at University of California, Irvine</p>
 							</header>
 						</div>
 
@@ -32,20 +34,14 @@
 								<li>
 									<a href="#">Research</a>
 									<ul>
-										<li><a href="#">High-Redshift Lya Emitters</a></li>
-										<li><a href="#">Ultra-Massive Galaxies</a></li>
-										<li><a href="#">Diffuse Gas around Galaxies (CGM)</a></li>
+										<li><a href="lyaE.html">High-Redshift Lya Emitters</a></li>
+										<li><a href="umgs.html">Ultra-Massive Galaxies</a></li>
+										<li><a href="cgm.html">Diffuse Gas around Galaxies (CGM)</a></li>
 									</ul>
 								</li>
-								<li>
-									<a href="#">Outreach</a>
-									<ul>
-										<li><a href="#">PACE</a></li>
-										<li><a href="#">PGC</a></li>
-									</ul>
-								</li>
-								<li><a href="left-sidebar.html">Publications</a></li>
-								<li><a href="right-sidebar.html">Teaching</a></li>
+								<li><a href="pub.html">Publications</a></li>
+								<li><a href="outreach.html">Outreach & Service</a></li>
+								<li><a href="teaching.html">Teaching</a></li>
 								<li><a href="contact.html">Contact</a></li>
 								<li><a href="CV/StawinskiStephanie_CV.pdf">CV</a></li>
 							</ul>
@@ -58,21 +54,7 @@
 					<div class="container">
 						<div class="row gtr-200">
 							<div class="col-4 col-12-mobile" id="sidebar">
-								<hr class="first" />
-								<section>
-									<header>
-										<h3><a href="#">Accumsan sed penatibus</a></h3>
-									</header>
-									<p>
-										Dolor sed fringilla nibh nulla convallis tique ante proin sociis accumsan lobortis. Auctor etiam
-										porttitor phasellus tempus cubilia ultrices tempor sagittis  tellus ante diam nec penatibus dolor cras
-										magna tempus feugiat veroeros.
-									</p>
-									<footer>
-										<a href="#" class="button">Learn More</a>
-									</footer>
-								</section>
-								<hr />
+	
 								<section>
 									<header>
 										<h3><a href="#">Sed lorem etiam consequat</a></h3>
@@ -127,9 +109,7 @@
 											</p>
 										</div>
 									</div>
-									<footer>
-										<a href="#" class="button">Magna Adipiscing</a>
-									</footer>
+
 								</section>
 							</div>
 							<div class="col-8 col-12-mobile imp-mobile" id="content">
@@ -180,39 +160,6 @@
 								</article>
 							</div>
 						</div>
-						<hr />
-						<div class="row">
-							<article class="col-4 col-12-mobile special">
-								<a href="#" class="image featured"><img src="images/pic07.jpg" alt="" /></a>
-								<header>
-									<h3><a href="#">Gravida aliquam penatibus</a></h3>
-								</header>
-								<p>
-									Amet nullam fringilla nibh nulla convallis tique ante proin sociis accumsan lobortis. Auctor etiam
-									porttitor phasellus tempus cubilia ultrices tempor sagittis. Nisl fermentum consequat integer interdum.
-								</p>
-							</article>
-							<article class="col-4 col-12-mobile special">
-								<a href="#" class="image featured"><img src="images/pic08.jpg" alt="" /></a>
-								<header>
-									<h3><a href="#">Sed quis rhoncus placerat</a></h3>
-								</header>
-								<p>
-									Amet nullam fringilla nibh nulla convallis tique ante proin sociis accumsan lobortis. Auctor etiam
-									porttitor phasellus tempus cubilia ultrices tempor sagittis. Nisl fermentum consequat integer interdum.
-								</p>
-							</article>
-							<article class="col-4 col-12-mobile special">
-								<a href="#" class="image featured"><img src="images/pic09.jpg" alt="" /></a>
-								<header>
-									<h3><a href="#">Magna laoreet et aliquam</a></h3>
-								</header>
-								<p>
-									Amet nullam fringilla nibh nulla convallis tique ante proin sociis accumsan lobortis. Auctor etiam
-									porttitor phasellus tempus cubilia ultrices tempor sagittis. Nisl fermentum consequat integer interdum.
-								</p>
-							</article>
-						</div>
 					</div>
 
 				</div>
@@ -228,7 +175,7 @@
 										<header>
 											<h3>Contact Info</h3>
 										</header>
-										<p>Twitter: XX Email: sstawins [at] uci.edu</p>
+										<p>Twitter: <a href="https://twitter.com/astrostawinski"> @astrostawinski </a> &emsp;  Email: sstawins [at] uci.edu  &emsp;  Gmail: ststawinski [at] gmail.com</p>
 									</section>
 
 								<!-- Copyright -->
