--- a/umgs.html
+++ b/umgs.html
@@ -21,9 +21,7 @@
 					<!-- Inner -->
 						<div class="inner">
 							<header>
-								<h1>Stephanie Urbano Stawinski</h1>
-								<hr />
-								<p>Ph.D. Student at University of California, Irvine</p>
+								<h1><a href="index.html" id="logo">Ultra-Massive Galaxies</a></h1>
 							</header>
 						</div>
 
