--- a/umgs.html
+++ b/umgs.html
@@ -12,7 +12,7 @@
 		<link rel="stylesheet" href="assets/css/main.css" />
 		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
 	</head>
-	<body class="homepage is-preload">
+	<body class="left-sidebar is-preload">
 		<div id="page-wrapper">
 
 			<!-- Header -->
@@ -21,7 +21,7 @@
 					<!-- Inner -->
 						<div class="inner">
 							<header>
-								<h1><a href="index.html" id="logo">Ultra-Massive Galaxies</a></h1>
+								<h1>Ultra-Massive Galaxies</h1>
 							</header>
 						</div>
 
@@ -55,10 +55,10 @@
 	
 								<section>
 									<header>
-										<h3><a href="#">Sed lorem etiam consequat</a></h3>
+										<h3><a href="#">Recent Publications </a></h3>
 									</header>
 									<p>
-										Tempus cubilia ultrices tempor sagittis. Nisl fermentum consequat integer interdum.
+										This is under construction, to be updated soon!
 									</p>
 									<div class="row gtr-50">
 										<div class="col-4">
@@ -69,74 +69,27 @@
 											<p>
 												Amet nullam fringilla nibh nulla convallis tique ante proin.
 											</p>
-										</div>
-										<div class="col-4">
-											<a href="#" class="image fit"><img src="images/pic11.jpg" alt="" /></a>
-										</div>
-										<div class="col-8">
-											<h4>Proin sed adipiscing</h4>
-											<p>
-												Amet nullam fringilla nibh nulla convallis tique ante proin.
-											</p>
-										</div>
-										<div class="col-4">
-											<a href="#" class="image fit"><img src="images/pic12.jpg" alt="" /></a>
-										</div>
-										<div class="col-8">
-											<h4>Lorem feugiat magna</h4>
-											<p>
-												Amet nullam fringilla nibh nulla convallis tique ante proin.
-											</p>
-										</div>
-										<div class="col-4">
-											<a href="#" class="image fit"><img src="images/pic13.jpg" alt="" /></a>
-										</div>
-										<div class="col-8">
-											<h4>Sed tempus fringilla</h4>
-											<p>
-												Amet nullam fringilla nibh nulla convallis tique ante proin.
-											</p>
-										</div>
-										<div class="col-4">
-											<a href="#" class="image fit"><img src="images/pic14.jpg" alt="" /></a>
-										</div>
-										<div class="col-8">
-											<h4>Malesuada fermentum</h4>
-											<p>
-												Amet nullam fringilla nibh nulla convallis tique ante proin.
-											</p>
-										</div>
 									</div>
 
 								</section>
 							</div>
 							<div class="col-8 col-12-mobile imp-mobile" id="content">
 								<article id="main">
-									<header>
-										<h2><a href="#">Left Sidebar</a></h2>
-										<p>
-											Morbi convallis lectus malesuada sed fermentum dolore amet
-										</p>
-									</header>
-									<a href="#" class="image featured"><img src="images/pic06.jpg" alt="" /></a>
-									<p>
-										Commodo id natoque malesuada sollicitudin elit suscipit. Curae suspendisse mauris posuere accumsan massa
-										posuere lacus convallis tellus interdum. Amet nullam fringilla nibh nulla convallis ut venenatis purus
-										lobortis. Auctor etiam porttitor phasellus tempus cubilia ultrices tempor sagittis. Nisl fermentum
-										consequat integer interdum integer purus sapien. Nibh eleifend nulla nascetur pharetra commodo mi augue
-										interdum tellus. Ornare cursus augue feugiat sodales velit lorem. Semper elementum ullamcorper lacinia
-										natoque aenean scelerisque vel lacinia mollis quam sodales congue.
-									</p>
 									<section>
 										<header>
-											<h3>Ultrices tempor sagittis nisl</h3>
+											<h3>Spectroscopic Confirmation of Ultra-Massive at 4 < z < 5</h3>
 										</header>
+										<a href="#" class="image featured"><img src="images/umg_spec_ex.jpg" alt="" /></a>
+
 										<p>
-											Nascetur volutpat nibh ullamcorper vivamus at purus. Cursus ultrices porttitor sollicitudin imperdiet
-											at pretium tellus in euismod a integer sodales neque. Nibh quis dui quis mattis eget imperdiet venenatis
-											feugiat. Neque primis ligula cum erat aenean tristique luctus risus ipsum praesent iaculis. Fermentum elit
-											fringilla consequat dis arcu. Pellentesque mus tempor vitae pretium sodales porttitor lacus. Phasellus
-											egestas odio nisl duis sociis purus faucibus morbi. Eget massa mus etiam sociis pharetra magna.
+											A major outstanding question in galaxy evolution lies in the mechanisms behind the rapid formation and subsequent
+											quenching of massive galaxies at early epochs. Recently, the Massive Ancient Galaxies At z > 3 NEar-infrared (MAGAZ3NE)
+											survey spectroscopically confirmed the existence of rare ultra-massive galaxies (UMGs, M* > 1011 M⊙) from 3 < z < 4. 
+											These studies suggest that a significant fraction of UMGs experienced a period of bursty star-formation followed by 
+											rapid quenching between 4 < z < 5, motivating the need for spectroscopic confirmation and characterization of UMGs at this 
+											crucial epoch. Using multi-band, wide-field imaging from the MAGAZ3NE collaboration in the XMM-VIDEO and COSMOS UltraVISTA 
+											fields, we identified a sample of UMGs with zphot > 4. We observed each of the 4 UMG candidates for ~4 hours with Keck/LRIS 
+											over a broad wavelength range to cover any potential Lyman-alpha emission, Lyman-break, or other ISM features. 
 										</p>
 										<p>
 											Eleifend auctor turpis magnis sed porta nisl pretium. Aenean suspendisse nulla eget sed etiam parturient
