--- a/umgs.html
+++ b/umgs.html
@@ -55,7 +55,7 @@
 	
 								<section>
 									<header>
-										<h3><a href="#">Recent Publications </a></h3>
+										<h3>Recent Publications </h3>
 									</header>
 									<p>
 										This is under construction, to be updated soon!
