--- a/pub.html
+++ b/pub.html
@@ -54,28 +54,28 @@
 					<div class="container">
 						<article id="main" class="special">
 							<header>
-								<h2>First Author</h2>
+								<h3>First Author</h3>
 							</header>
 							<section>
 								<header>
-									<h3>Ultrices tempor sagittis nisl</h3>
+									<h3>Spectroscopic Redshift Survey in EGS field using Keck/DEIMOS: Preparation for the Cosmic Evolution Early Release Science Survey</h3>
 								</header>
 								<p>
-									Nascetur volutpat nibh ullamcorper vivamus at purus. Cursus ultrices porttitor sollicitudin imperdiet
-									at pretium tellus in euismod a integer sodales neque. Nibh quis dui quis mattis eget imperdiet venenatis
-									feugiat. Neque primis ligula cum erat aenean tristique luctus risus ipsum praesent iaculis. Fermentum elit
-									fringilla consequat dis arcu. Pellentesque mus tempor vitae pretium sodales porttitor lacus. Phasellus
-									egestas odio nisl duis sociis purus faucibus morbi. Eget massa mus etiam sociis pharetra magna.
+								Stephanie M. Urbano Stawinski, M. C. Cooper <br>
+									<a href="#">In prep. </a>
 								</p>
-                <header>
-									<h3>Ultrices tempor sagittis nisl</h3>
+								<header>
+									<h3>On the Metallicities and Kinematics of the Circumgalactic Media of Damped Lyα Systems at z∼2</h3>
 								</header>
 								<p>
-									Eleifend
+								Stephanie M. Urbano Stawinski, Kate H.R. Rubin, J. Xavier Prochaska, Joseph F. Hennawi,
+									Nicolas Tejos, Michele Fumagalli, Marc Rafelski, Evan N. Kirby, ELisabeta Lusso,
+									Zachary Hafen <br>
+									<a href="#">In prep. </a>
 								</p>
 							</section>
-              <header>
-								<h2>Nth Author</h2>
+          						<header>
+								<h3>Nth Author</h3>
 							</header>
 							<section>
 								<header>
@@ -87,17 +87,6 @@
 							</section>
 						</article>
 						<hr />
-						<div class="row">
-							<article class="col-4 col-12-mobile special">
-								<a href="#" class="image featured"><img src="images/pic07.jpg" alt="" /></a>
-								<header>
-									<h3><a href="#">Gravida aliquam penatibus</a></h3>
-								</header>
-								<p>
-									Amet nullam fringilla nibh nulla convallis tique ante proin sociis accumsan lobortis. Auctor etiam
-									porttitor phasellus tempus cubilia ultrices tempor sagittis. Nisl fermentum consequat integer interdum.
-								</p>
-						</div>
 					</div>
 
 				</div>
