--- a/pub.html
+++ b/pub.html
@@ -61,14 +61,14 @@
 									<h3>Spectroscopic Redshift Survey in EGS field using Keck/DEIMOS: Preparation for the Cosmic Evolution Early Release Science Survey</h3>
 								</header>
 								<p>
-								Stephanie M. Urbano Stawinski, M. C. Cooper <br>
+									<span style="color:#00008B">Stephanie M. Urbano Stawinski</span>, M. C. Cooper <br>
 									<a href="#">In prep. </a>
 								</p>
 								<header>
 									<h3>On the Metallicities and Kinematics of the Circumgalactic Media of Damped Lyα Systems at z∼2</h3>
 								</header>
 								<p>
-								Stephanie M. Urbano Stawinski, Kate H.R. Rubin, J. Xavier Prochaska, Joseph F. Hennawi,
+									<span style="color:#00008B">Stephanie M. Urbano Stawinski</span>, Kate H.R. Rubin, J. Xavier Prochaska, Joseph F. Hennawi,
 									Nicolas Tejos, Michele Fumagalli, Marc Rafelski, Evan N. Kirby, ELisabeta Lusso,
 									Zachary Hafen <br>
 									<a href="#">In prep. </a>
@@ -79,10 +79,18 @@
 							</header>
 							<section>
 								<header>
-									<h3>Augue euismod feugiat tempus</h3>
+									<h3>Additional Multicolor Photometric Observations of the Latest Eruption of the Recurrent Nova M31N 2008-12a</h3>
 								</header>
 								<p>
-									Pretium 
+								P. A. Wysocki, Q. Socia, M. A. Engesser, M. Yenawine, <span style="color:#00008B"> S. M. Stawinski </span>, A. W. Shafter 
+								<a href="https://ui.adsabs.harvard.edu/abs/2018ATel12190....1W/abstract"> Nasa Ads </a>
+								</p>
+								<header>
+									<h3>SÍGAME Simulations of the [CII], [OI], and [OIII] Line Emission from Star-forming Galaxies at z≃ 6</h3>
+								</header>
+								<p>
+								Karen Olsen, Thomas R. Greve, Desika Narayanan, Robert Thompson, Romeel Davé, Luis Niebla Rios, and <span style="color:#00008B">Stephanie Stawinski</span>	
+								<a href="https://ui.adsabs.harvard.edu/abs/2017ApJ...846..105O/abstract">Nasa Ads </a>
 								</p>
 							</section>
 						</article>
