--- a/pub.html
+++ b/pub.html
@@ -69,7 +69,7 @@
 								</header>
 								<p>
 									<span style="color:#00008B">Stephanie M. Urbano Stawinski</span>, Kate H.R. Rubin, J. Xavier Prochaska, Joseph F. Hennawi,
-									Nicolas Tejos, Michele Fumagalli, Marc Rafelski, Evan N. Kirby, ELisabeta Lusso,
+									Nicolas Tejos, Michele Fumagalli, Marc Rafelski, Evan N. Kirby, Elisabeta Lusso,
 									Zachary Hafen <br>
 									<a href="#">In prep. </a>
 								</p>
@@ -82,21 +82,19 @@
 									<h3>Additional Multicolor Photometric Observations of the Latest Eruption of the Recurrent Nova M31N 2008-12a</h3>
 								</header>
 								<p>
-								P. A. Wysocki, Q. Socia, M. A. Engesser, M. Yenawine, <span style="color:#00008B"> S. M. Stawinski </span>, A. W. Shafter 
+								P. A. Wysocki, Q. Socia, M. A. Engesser, M. Yenawine, <span style="color:#00008B"> S. M. Stawinski </span>, A. W. Shafter <br>
 								<a href="https://ui.adsabs.harvard.edu/abs/2018ATel12190....1W/abstract"> Nasa Ads </a>
 								</p>
 								<header>
 									<h3>SÍGAME Simulations of the [CII], [OI], and [OIII] Line Emission from Star-forming Galaxies at z≃ 6</h3>
 								</header>
 								<p>
-								Karen Olsen, Thomas R. Greve, Desika Narayanan, Robert Thompson, Romeel Davé, Luis Niebla Rios, and <span style="color:#00008B">Stephanie Stawinski</span>	
+								Karen Olsen, Thomas R. Greve, Desika Narayanan, Robert Thompson, Romeel Davé, Luis Niebla Rios, and <span style="color:#00008B">Stephanie Stawinski</span> <br>	
 								<a href="https://ui.adsabs.harvard.edu/abs/2017ApJ...846..105O/abstract">Nasa Ads </a>
 								</p>
 							</section>
 						</article>
-						<hr />
 					</div>
-
 				</div>
 			<!-- Footer -->
 				<div id="footer">
