--- a/pub.html
+++ b/pub.html
@@ -61,17 +61,17 @@
 									<h3>Spectroscopic Redshift Survey in EGS field using Keck/DEIMOS: Preparation for the Cosmic Evolution Early Release Science Survey</h3>
 								</header>
 								<p>
-									<span style="color:#00008B">Stephanie M. Urbano Stawinski</span>, M. C. Cooper <br>
-									<a href="#">In prep. </a>
+									<span style="font-weight:bold","color:#00008B">Stephanie M. Urbano Stawinski</span>, M. C. Cooper <br>
+									<a href="#"><span style="color:#F4BB44">In prep.</span></a>
 								</p>
 								<header>
 									<h3>On the Metallicities and Kinematics of the Circumgalactic Media of Damped Lyα Systems at z∼2</h3>
 								</header>
 								<p>
-									<span style="color:#00008B">Stephanie M. Urbano Stawinski</span>, Kate H.R. Rubin, J. Xavier Prochaska, Joseph F. Hennawi,
+									<span style="font-weight:bold","color:#00008B">Stephanie M. Urbano Stawinski</span>, Kate H.R. Rubin, J. Xavier Prochaska, Joseph F. Hennawi,
 									Nicolas Tejos, Michele Fumagalli, Marc Rafelski, Evan N. Kirby, Elisabeta Lusso,
 									Zachary Hafen <br>
-									<a href="#">In prep. </a>
+									<a href="#"><span style="color:#F4BB44">In prep.</span></a>
 								</p>
 							</section>
           						<header>
@@ -82,15 +82,15 @@
 									<h3>Additional Multicolor Photometric Observations of the Latest Eruption of the Recurrent Nova M31N 2008-12a</h3>
 								</header>
 								<p>
-								P. A. Wysocki, Q. Socia, M. A. Engesser, M. Yenawine, <span style="color:#00008B"> S. M. Stawinski </span>, A. W. Shafter <br>
-								<a href="https://ui.adsabs.harvard.edu/abs/2018ATel12190....1W/abstract"> Nasa Ads </a>
+								P. A. Wysocki, Q. Socia, M. A. Engesser, M. Yenawine, <span style="font-weight:bold","color:#00008B"> S. M. Stawinski </span>, A. W. Shafter <br>
+								<a href="https://ui.adsabs.harvard.edu/abs/2018ATel12190....1W/abstract"> <span style="color:#F4BB44"> 2018, ATel, 12190, 1 </span></a>
 								</p>
 								<header>
 									<h3>SÍGAME Simulations of the [CII], [OI], and [OIII] Line Emission from Star-forming Galaxies at z≃ 6</h3>
 								</header>
 								<p>
-								Karen Olsen, Thomas R. Greve, Desika Narayanan, Robert Thompson, Romeel Davé, Luis Niebla Rios, and <span style="color:#00008B">Stephanie Stawinski</span> <br>	
-								<a href="https://ui.adsabs.harvard.edu/abs/2017ApJ...846..105O/abstract">Nasa Ads </a>
+								Karen Olsen, Thomas R. Greve, Desika Narayanan, Robert Thompson, Romeel Davé, Luis Niebla Rios, and <span style="font-weight:bold","color:#00008B">Stephanie Stawinski</span> <br>	
+								<a href="https://ui.adsabs.harvard.edu/abs/2017ApJ...846..105O/abstract"> <span style="color:#F4BB44"> 2017, ApJ, 846, 1050 </span> </a>
 								</p>
 							</section>
 						</article>
