--- a/outreach.html
+++ b/outreach.html
@@ -52,7 +52,7 @@
 				<div class="wrapper style1">
 
 					<div class="container">
-						<div class="row gtr-200">
+						<div class="row">
 							<div class="col-4 col-12-mobile" id="sidebar">
 								<hr class="first" />
 								<section>
