--- a/outreach.html
+++ b/outreach.html
@@ -67,7 +67,7 @@
 											<a href="#" class="image fit"><img src="images/pic10.jpg" alt="" /></a>
 										</div>
 										<div class="col-8">
-											<h4>Nibh sed cubilia</h4>
+											<h4>PACE</h4>
 											<p>
 												Amet nullam fringilla nibh nulla convallis tique ante proin.
 											</p>
@@ -76,7 +76,7 @@
 											<a href="#" class="image fit"><img src="images/pic11.jpg" alt="" /></a>
 										</div>
 										<div class="col-8">
-											<h4>Proin sed adipiscing</h4>
+											<h4>PGC</h4>
 											<p>
 												Amet nullam fringilla nibh nulla convallis tique ante proin.
 											</p>
